--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,10 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet" media="none" onload="if(media!='all')media='all'">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" media="none" onload="if(media!='all')media='all'">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <
 </head>
 <body>
   <app-root></app-root>
